--- a/index.html
+++ b/index.html
@@ -21,10 +21,39 @@
 <svg width="120" height="120" viewBox="0 0 120 120" version="1.1"
      xmlns="http://www.w3.org/2000/svg">
   
-  <rect x="10" y="10" width="100" height="100">
+  <rect x="10" y="10" width="100" height="100" fill="lemonchiffon">
     <animate attributeType="XML" attributeName="x" from="-100" to="120"
         dur="10s" repeatCount="indefinite"/>
   </rect>
 </svg>
+<h1>Questions:</h1>
+<p>1. A profile is a collection of XHTML modules, style sheet specifications, or other document properties.</p>
+<p>2. </p>
+<p>3. SVG are Scalable Vector Graphics, it's an XML based vector image format used for graphics and animation.</p>
+<p>4. MathML is a mathematical markup language, an application of XML. It integrates math into webpages.</p>
+<p>5. MathML isn't supported in every web browser. Only Gecko-based browsers support it, like Firefox. Chrome and Safari used to support it, but they don't anymore. SVG, however, is still supported by all browsers.</p>
+<h1>Part B</h1>
+<p>1. SVG is scalable- you can zoom in indefinitely and you won't see any pixels, unlike a normal image. It's also interactive, meaning you can add hyperlinks to SVG graphics, or even animation.</p>
+<p>2. SVG can't be supported on old browsers and they can't hold much detail since it's based on points and paths. They're also pretty difficult to make.</p>
+<p>3. Adobe Illustrator uses SVG (you can make your own) and you can view them in Photoshop.</p>
+<p>4. SVG will most likely be used in a graphic design class</p>
+<p>5. </p>
+<table>
+	<tr>
+		<th>No.</th>
+		<th>Website URL</th>
+		<th>Use</th>
+		<th>How effective</th>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>Emojis</td>
+	</tr>
+</table>
+<h1>Part C</h1>
+<p>1. Chrome, because it supports SVG.</p>
+<p>2. No addons were needed due to the support.</p>
+<h1>Part D is above.</h1>
+<p>Flash and SVG don't have many differences. You can zoom in on both and not see any pixels. However, SVG is mostly stationery and Flash can be used for games and animations since it's a program, while SVG is just an image filetype.</p>
 </body>
 </html>
