--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
 <head>
 </head>
 <body>
-<svg height="400" width="400">
-  <defs>
-    <filter id="f1" x="0" y="0">
-      <feGaussianBlur in="SourceGraphic" stdDeviation="15" />
-    </filter>
-  </defs>
-  <rect width="400" height="400" stroke="green" stroke-width="3"
-  fill="yellow" filter="url(#f1)" />
+<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" version="1.1">
+
+<defs>
+<filter id="MyFilter" filterUnits="userSpaceOnUse" x="0" y="0" width="200" height="120">
+
+	<feGaussianBlur in="SourceAlpha" stdDeviation="4" result="blur"/>
+
+</filter>
+</defs>
+
+<rect x="1" y="1" width="198" height="118" fill="#cccccc"/>
+
+<g filter="url(#MyFilter)">
+<path fill="none" stroke="#D90000" stroke-width="10" d="M50,90 C0,90 0,30 50,30 L150,30 C200,30 200,90 150,90 z"/>
+<text fill="#FFFFFF" stroke="black" font-size="45" font-family="Verdana" x="52" y="76">SVG</text>
+</g>
+
 </svg>
 <svg height="150" width="500">
   <ellipse cx="240" cy="100" rx="220" ry="30" style="fill:purple" />
