--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
+<script src="script.js"></script>
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" version="1.1">
 
 <defs>
-<filter id="MyFilter" filterUnits="userSpaceOnUse" x="0" y="0" width="200" height="120">
-
-	<feGaussianBlur in="SourceAlpha" stdDeviation="4" result="blur"/>
-
-</filter>
+	<filter id="blurMe">
+        <feGaussianBlur in="SourceAlpha" stdDeviation="5" />
+      </filter>
 </defs>
 
 <rect x="1" y="1" width="198" height="118" fill="#cccccc"/>
 
-<g filter="url(#MyFilter)">
+<g filter="url(#blurMe)">
 <path fill="none" stroke="#D90000" stroke-width="10" d="M50,90 C0,90 0,30 50,30 L150,30 C200,30 200,90 150,90 z"/>
 <text fill="#FFFFFF" stroke="black" font-size="45" font-family="Verdana" x="52" y="76">SVG</text>
 </g>
@@ -32,7 +31,7 @@
   
   <rect x="10" y="10" width="100" height="100" fill="lemonchiffon">
     <animate attributeType="XML" attributeName="x" from="-100" to="120"
-        dur="10s" repeatCount="indefinite"/>
+        dur="10s" repeatCount="indefinite" />
   </rect>
 </svg>
 <h1>Questions:</h1>
